--- a/painting_2.html
+++ b/painting_2.html
@@ -133,9 +133,9 @@
                 "新相机拍_194.jpg",
 
                 "新相机拍_107.jpg",  //9
-                "_ZZH0127.JPG",      //43
+                "ZZH0127.JPG",      //43
                 "新相机拍_113.jpg",       //46
-                "_ZZH0124.JPG"
+                "ZZH0124.JPG"
 
 
 
