rename the pictures with underscore

--- a/painting_2_ch.html
+++ b/painting_2_ch.html
@@ -136,9 +136,9 @@
 
 
                 "新相机拍_107.jpg",  //9
-                "_ZZH0127.JPG",      //43
+                "ZZH0127.JPG",      //43
                 "新相机拍_113.jpg",       //46
-                "_ZZH0124.JPG"
+                "ZZH0124.JPG"
 
         );
 
