--- a/contact.html
+++ b/contact.html
@@ -118,9 +118,14 @@
                       Corte Madera,CA 94925     <br>
                       USA
                       </span><br> <br>
-                      <span class="address color-9">email
+                      <span class="address color-9">Email
                       <br>
-                      Yueyingzhong@gmail.com
+                      yueyingzhong@gmail.com
+                      <br>
+                      </span><br>
+                    <span class="address color-9">website
+                      <br>
+                      http://www.zhongyueying.com
                       <br>
                       </span><br>
                   </p>
