--- a/publications.html
+++ b/publications.html
@@ -78,131 +78,142 @@
         var imagePath2 = Array();
         var descPath2 = Array();
         var pub2 = Array (
-                "Yueying Zhong, Overseas Ink Paintings, Chinese National Art Museum, China   11,2013 ",
+        "Yueying Zhong, Overseas Ink Paintings  <BR>Chinese National Art Museum, China   11,2013 ",
 
-        "Yueying Zhong, Contemporary Western Arts, National Arts, China 10, 2013",
+        "Yueying Zhong, Contemporary Western Arts <BR> National Arts, China 10, 2013",
 
-        "Yueying Zhong, Michael Sullivan’s Chinese Arts Collections, Collect, China 8, 2013",
+        "Yueying Zhong, Michael Sullivan’s Chinese Arts Collections <BR> Collect, China 8, 2013",
 
-        "Yueying Zhong, Chinese Art be Contemporary, National Arts, China 7, 2013",
+        "Yueying Zhong, Chinese Art be Contemporary<BR> National Arts, China 7, 2013",
 
-        "Yueying Zhong, Chinese Ink Painting Seedling in American, Art Observe, China   5, 2013",
+        "Yueying Zhong, Chinese Ink Painting Seedling in American <BR> Art Observe, China   5, 2013",
 
-        "Yueying Zhong, Spirit of Ancient Chinese Art Reveals in Contemporary American Art, " +
-        " Chinese National Art Museum, China 12, 2010 ",
+        "Yueying Zhong, Spirit of Ancient Chinese Art Reveals in Contemporary American Art  " +
+        "<BR>Chinese National Art Museum, China 12, 2010 ",
 
         "Yueying Zhong, Contemporary American Art Reveals the Spirit of Chinese Art, " +
-        "Art View, China 4, 2010 ",
+        "<BR> Art View, China 4, 2010 ",
 
-        "Yueying Zhong, The Transform of Art, Art Garden, China 1, 2010 ",
+        "Yueying Zhong, The Transform of Art <BR> Art Garden, China 1, 2010 ",
 
-        "Yueying Zhong, The Spirit of Ink Painting, Art Garden, China, 5, 2007",
-        "Yueying Zhong, Cutting Edge - The Chinese Painting Encounters the Western," +
-        " Art Grand, China 9, 2005 ",
+        "Yueying Zhong, The Spirit of Ink Painting <BR>Art Garden, China, 5, 2007",
+
+        "Yueying Zhong, Cutting Edge - The Chinese Painting Encounters the Western" +
+        " <BR> Art Grand, China 9, 2005 ",
 
         "Yueying Zhong, A Summary and Commentary on the Second Chinese Art Expo  " +
-        " Grand View of Fine Art, China 3:34-5 1995 " ,
+        " <BR> Grand View of Fine Art, China 3:34-5 1995 " ,
 
-        "Yueying Zhong, The Difference of Art Spirits Expressed by East and West, " +
-        " Northeastern Art, China 1:23-30, 1995.",
+        "Yueying Zhong, The Difference of Art Spirits Expressed by East and West  " +
+        " <BR> Northeastern Art, China 1:23-30, 1995.",
 
-        "Yueying Zhong, The Modern Transformation of Traditional Paintings, " +
-        "Contemporary Academic Art, China 1:42-7, 1994.",
+        "Yueying Zhong, The Modern Transformation of Traditional Paintings " +
+        "<BR>Contemporary Academic Art, China 1:42-7, 1994.",
 
-        "Yueying Zhong, Artists in Art Markets, Grand View of Fine Art, China 5: 38-39, 1994. " ,
+        "Yueying Zhong, Artists in Art Markets Grand View of Fine Art <BR> China 5: 38-39, 1994. " ,
 
-        "Yueying Zhong, A Review on Engraving Creating in Colleges of Fine Art," +
-        "Chinese Engraving Art, China 2:6-7, 1994.",
+        "Yueying Zhong, A Review on Engraving Creating in Colleges of Fine Art" +
+        "<BR> Chinese Engraving Art, China 2:6-7, 1994.",
 
         "Yueying Zhong, The Chinese Paintings as Correspondent Relations of Life-- " +
-                "Throb & Artist Order, Modern Art Commentary, China 1:23-8, 1994. ",
+                "<BR> Throb & Artist Order, Modern Art Commentary, China 1:23-8, 1994. ",
 
-        "Yueying Zhong, The Urgency in Establishing the Domestic Art market," +
-        " Grand View of Fine Art, China 1:44-5, 1994. ",
+        "Yueying Zhong, The Urgency in Establishing the Domestic Art market <BR>" +
+        "<BR> Grand View of Fine Art, China 1:44-5, 1994. ",
 
-        "Yueying Zhong, Who will Settle the Price? Grand View of Fine Art, China 11: 39, 1993. ",
+        "Yueying Zhong, Who will Settle the Price? <BR> Grand View of Fine Art, China 11: 39, 1993. ",
 
-        "Yueying Zhong, Reading Cultivation, Writing, China 8: 3, 1993. " ,
+        "Yueying Zhong, Reading Cultivation <BR> Writing, China 8: 3, 1993. " ,
 
-        "Yueying Zhong, The Relations Between Artists and Galleries," +
-        " Grand View of Fine Art, China 4: 38-9, 1993.",
+        "Yueying Zhong, The Relations Between Artists and Galleries " +
+        " <BR> Grand View of Fine Art, China 4: 38-9, 1993.",
 
-        "Yueying Zhong, Art Markets and Artists’ Style, Grand View of Fine Art, China 3: 38-9, 1993.  ",
+        "Yueying Zhong, Art Markets and Artists’ Style  <BR> Grand View of Fine Art, China 3: 38-9, 1993.  ",
 
-        "Yueying Zhong, Qi in Chinese Traditional Paintings," +
-        "Chinese Book and Picture Periodical, China 4:1-4, 1993.",
+        "Yueying Zhong, Qi in Chinese Traditional Paintings " +
+        "<BR> Chinese Book and Picture Periodical, China 4:1-4, 1993.",
 
-        "Yueying Zhong, ‘The Revelations of Feeling and Nature, Garden of fine art, China 2: 7-8, 1993.",
+        "Yueying Zhong, ‘The Revelations of Feeling and Nature <BR> Garden of fine art, China 2: 7-8, 1993.",
 
-        "Yueying Zhong, A Review on Chinese Paintings, Garden of fine art, China 2: 46-8, 1993.",
+        "Yueying Zhong, A Review on Chinese Paintings<BR> Garden of fine art, China 2: 46-8, 1993.",
 
-        "Yueying Zhong, Artists and Art Markets, Grand View of Fine Art, China 1: 38-9, 1993.",
+        "Yueying Zhong, Artists and Art Markets<BR> Grand View of Fine Art, China 1: 38-9, 1993.",
 
         "Yueying Zhong, The evolution of vivid Qi rhyme and the emerging of " +
-                "Chinese ink painting techniques-III, Chinese People’s Art Taiwan, 2: 36-42, 1993.",
+                "Chinese ink painting techniques-III <BR> Chinese People’s Art Taiwan, 2: 36-42, 1993.",
 
         "Yueying Zhong, The Evolution of Vivid Qi Rhyme and the Emerging of Chinese ink Painting Techniques-II, " +
-                "Chinese People’s Art Taiwan, 1: 48-53, 1993.",
+                "<BR> Chinese People’s Art Taiwan, 1: 48-53, 1993.",
 
         "Yueying Zhong, The Evolution of Vivid Qi Rhyme and the Emerging of Chinese ink Painting Techniques-II, " +
-                "Chinese People’s Art Taiwan, 12, 37-41, 1992. ",
+                "<BR> Chinese People’s Art Taiwan, 12, 37-41, 1992. ",
 
-        "Yueying Zhong, Artists Choose Market, Grand View of Fine Art, China 2: 38-9, 1993. ",
-
-        "Yueying Zhong, The Formation of Overseas Art Markets," +
-        "Grand View of Fine Art, China 12: 41, 1992.",
+        "Yueying Zhong, Artists Choose Market <BR> Grand View of Fine Art, China 2: 38-9, 1993. ",
 
         "Yueying Zhong, The Formation of Overseas Art Markets," +
-        "Grand View of Fine Art, China 11: 46-7, 1992. ",
+        "<BR> Grand View of Fine Art, China 12: 41, 1992.",
+
+        "Yueying Zhong, The Formation of Overseas Art Markets," +
+        "<BR> Grand View of Fine Art, China 11: 46-7, 1992. ",
 
         "Yueying Zhong, Arts and their value as commodities," +
-        "Grand View of Fine Art, China 11: 46-7, 1992. ",
+        "<BR> Grand View of Fine Art, China 11: 46-7, 1992. ",
 
         "Yueying Zhong, Exploring Guangdong Art School of Modern Chinese Paintings," +
-        "Artist Reportage, China 10: 11-2, 1992.",
+        "<BR> Artist Reportage, China 10: 11-2, 1992.",
 
         "Yueying Zhong, The Expression of Vivid Qi Rhyme and the Realization of Personality Spirits, " +
-        " Fine Art, China 7: 53-56, 1992.",
+        "<BR> Fine Art, China 7: 53-56, 1992.",
 
 
         "Yueying Zhong, The Theory and Forms of Chinese Ink Painting," +
-        "Art Exchange, China 6: 6-7, 1992." ,
+        "<BR>Art Exchange, China 6: 6-7, 1992." ,
 
-        "Yueying Zhong, The Definition of Vivid Qi Rhyme in Ming and Qing Dynasties and the Ink Painting Techniques, Garden of Fine Art, China 2: 19-20, 1992.",
+        "Yueying Zhong, The Definition of Vivid Qi Rhyme in Ming and Qing Dynasties and the Ink Painting Techniques," +
+                "<BR> Garden of Fine Art, China 2: 19-20, 1992.",
 
-        "Yueying Zhong, The Definition of Vivid Qi Rhyme in Ming and Qing Dynasties and the Ink Painting Techniques, Garden of Fine Art, China 1: 17-20, 1992.",
+        "Yueying Zhong, The Definition of Vivid Qi Rhyme in Ming and Qing Dynasties and the Ink Painting Techniques," +
+                "<BR> Garden of Fine Art, China 1: 17-20, 1992.",
 
-        "Yueying Zhong, The Elements in Shaping Modern Northeastern Chinese Painting Style, Garden of Fine Art, China 2: 4-7, 1991.",
+        "Yueying Zhong, The Elements in Shaping Modern Northeastern Chinese Painting Style," +
+                "<BR> Garden of Fine Art, China 2: 4-7, 1991.",
 
-        "Yueying Zhong, Artists’ Affection, Garden of fine art, China 4: 37-39, 1990.",
+        "Yueying Zhong, Artists’ Affection" +
+                "<BR> Garden of fine art, China 4: 37-39, 1990.",
 
         "Yueying Zhong, Meaning and Expression," +
-        "Journal of Mudangjiang Normal College, China 2: 4-7 1990.",
+        "<BR>Journal of Mudangjiang Normal College, China 2: 4-7 1990.",
 
-        "Yueying Zhong, The Comparative Chronology and Events of Chinese and Western Art History-V, Garden of Fine Art, China 1: 53-57 1989.",
+        "Yueying Zhong, The Comparative Chronology and Events of Chinese and Western Art History-V," +
+                "<BR> Garden of Fine Art, China 1: 53-57 1989.",
 
-        "Yueying Zhong.  “The Comparative Chronology and Events of Chinese and Western Art History-IV, Garden of Fine Art, China 4: 53-57 1989.",
+        "Yueying Zhong.  “The Comparative Chronology and Events of Chinese and Western Art History-IV, " +
+                "<BR> Garden of Fine Art, China 4: 53-57 1989.",
 
-        "Yueying Zhong, The Comparative Chronology and Events of Chinese and Western Art History-III”. Garden of Fine Art, China 3: 53-57 1989.",
+        "Yueying Zhong, The Comparative Chronology and Events of Chinese and Western Art History-III”." +
+                "<BR> Garden of Fine Art, China 3: 53-57 1989.",
 
-        "Yueying Zhong, The Comparative Chronology and events of Chinese and Western Art History-II”. Garden of Fine Art, China 2: 53-57 1989.",
+        "Yueying Zhong, The Comparative Chronology and events of Chinese and Western Art History-II”" +
+                "<BR> Garden of Fine Art, China 2: 53-57 1989.",
 
-        "Yueying Zhong, The Comparative Chronology and Events of Chinese and Western Art History-I”. Garden of Fine Art, China 1: 53-57 1989.",
+        "Yueying Zhong, The Comparative Chronology and Events of Chinese and Western Art History-I”" +
+                "<BR> Garden of Fine Art, China 1: 53-57 1989.",
 
         "Yueying Zhong, Defending the Imitation and Copying, Fine Art, China 1-27-8 1989.",
 
         "Yueying Zhong, The Meanings of Imitation and Copying," +
-        "Trend of Art Thoughts, Final Issue, China 33-4 1988.",
+        "<BR>Trend of Art Thoughts, Final Issue, China 33-4 1988.",
 
-        "Yueying Zhong, The Significance of Modern Paintings, Artists Reportage, China 4: 11 1988.",
+        "Yueying Zhong, The Significance of Modern Paintings,<BR> Artists Reportage, China 4: 11 1988.",
 
-        "Yueying Zhong, The Differences and Similarities between Chinese art Spirits and Western’s.  Garden of Fine Art, China 2:14-7 1988.",
+        "Yueying Zhong, The Differences and Similarities between Chinese art Spirits and Western’s" +
+                "<BR>  Garden of Fine Art, China 2:14-7 1988.",
 
         "Yueying Zhong, The Chinese Classical Art Spirit Expressed in Sushi’s Aesthetics," +
-        "Garden of Fine Art, China 1: 13-5 1987.",
+        "<BR>Garden of Fine Art, China 1: 13-5 1987.",
 
         "Yueying Zhong, The Contemplation about the Debates on the ‘Tradition’," +
-        "Garden of Fine Art, China 3: 3-5 1986."
+        "<BR> Garden of Fine Art, China 3: 3-5 1986."
         );
 
              var imagePath3 = Array() ;
@@ -226,7 +237,7 @@
 
         " Yueying Zhong, Art - A Meaningful Form, Garden of fine art, China 2: 7-8 1994.",
 
-        " Yueying Zhong, Creating the Different Reality Forms, Grand View of Fine Art, China 11: 22-3 1993.",
+        " Yueying Zhong, Creating the Different Reality Forms, Grand View of Fine Art, China 11:22-3 1993.",
 
 
         " Yueying Zhong, Philosophically Explaining the White and Black World, "+
