--- a/publications_ch.html
+++ b/publications_ch.html
@@ -82,78 +82,78 @@
                 , "苏立文与中国艺术收藏				收藏   			8,2013"
                 , "被当代的中国当代艺术				国家美术		7,2013"
                 , "移植到美国的水墨艺术				美术观察  		5, 2013"
-                , "中国古代绘画精神在美国当代艺术中的体现 	中国美术馆,		12, 2010"
-                , "美国当代抽象艺术中的中国艺术精神  		艺术视野		4, 2010"
+                , "中国古代绘画精神在美国当代艺术中的体现<BR> 	中国美术馆,		12, 2010"
+                , "美国当代抽象艺术中的中国艺术精神  	<BR>	艺术视野		4, 2010"
                 , "东成西就					 美苑,			 1, 2010"
                 , "水墨---一种心灵再现的形式语言			美苑,			5, 2007"
                 , " 与谁较劲的中国当代前卫艺术 			美苑			4, 2005"
                 , " 第二届中国艺术博览会述评		 	美术大观		3, 1995"
                 , " 艺术市场情境中艺术家问题  			美术大观		5, 1994"
                 , " 传统绘画的现代转化, 				当代学院艺术		3, 1994	"
-                , "第二届全国高等美术院校版画创作教学年会概述,	中国版画	 	2,1994"
-                , " 建立国内艺术市场亟待解决的问题, 		美术大观		 1, 1994"
+                , "第二届全国高等美术院校版画创作教学年会概述 <BR>	中国版画	 	2,1994"
+                , " 建立国内艺术市场亟待解决的问题  <BR> 		美术大观		 1, 1994"
                 , " 谁来定价, 					美术大观		11, 1994"
                 , "读书,修艺, 					写作			 8, 1993"
                 , " 论中国画的”气”, 				中国书画报		4, 1993"
                 , " 画家与画廊的关系, 				美术大观		3, 1993"
                 , " 艺术市场与画家风格, 				美术大观		2, 1993"
-                , " “气韵生动”含义的演化与中国绘画笔墨标准的出现 (三)炎黄艺术(台湾)	 2, 1993"
+                , " “气韵生动”含义的演化与中国绘画笔墨标准的出现 (三), &nbsp; 炎黄艺术(台湾)	 2, 1993"
                 , "艺术家选择市场, 				美术大观		 2, 1993"
                 , " 论’气韵生动”含义的演化, 			朵云			1, 1993"
                 , " 艺术家与艺术市场, 				美术大观		1, 1993"
-                , "“气韵生动”含义的演化与中国绘画笔墨标准的出现 (二) 炎黄艺术 (台湾)	 1, 1993"
-                , " “气韵生动”含义的演化与中国绘画笔墨标准的出现 (一)炎黄艺术(台湾)	 12, 1992"
+                , "“气韵生动”含义的演化与中国绘画笔墨标准的出现 (二), &nbsp; 炎黄艺术 (台湾)	 1, 1993"
+                , " “气韵生动”含义的演化与中国绘画笔墨标准的出现 (一), &nbsp;炎黄艺术(台湾)	 12, 1992"
                 , " 国内艺术市场的状态,	 			美术大观		 12, 1992"
                 , " 国外艺术市场的状态,	 			美术大观		 11, 1992"
-                , "  探索现代中国画的”关东画派”, 			美术家通讯		10, 1992"
+                , "  探索现代中国画的”关东画派”  		<BR>	美术家通讯		10, 1992"
                 , "  艺术作品与它的商品属性, 			美术大观		10, 1992"
-                , " “气韵生动”的实现乃是人格精神的实现, 		美术			7, 1992"
+                , " “气韵生动”的实现乃是人格精神的实现  		<BR>美术			7, 1992"
                 , "  中国绘画表现的理念和形式, 			美术交流		6, 1992"
-                , " 明清之际” 气韵生动”含义的演化与中国绘画笔墨技法标准的确定(二)	美苑	 3, 1992"
-                , " 明清之际” 气韵生动”含义的演化与中国绘画笔墨技法标准的确定(一)	美苑	 2, 1992"
-                , " 论当代东北中国画艺术风格形成的诸因素,	 			美苑	 2, 1991"
+                , " 明清之际” 气韵生动”含义的演化与中国绘画笔墨技法标准的确定(二),&nbsp;	美苑	 3, 1992"
+                , " 明清之际” 气韵生动”含义的演化与中国绘画笔墨技法标准的确定(一),	&nbsp;美苑	 2, 1992"
+                , " 论当代东北中国画艺术风格形成的诸因素 	 		<BR>	美苑	 2, 1991"
                 , "  概论艺术家的情感,							美苑	 4, 1990"
                 , " 现代艺术的本体探索, 							美苑	3, 1990"
-                , " “寓意与物则乐, 画者需得其理” 				牡丹江师范学校学报	2, 1990"
-                , " 中西美术史比较年表, 大事, 图表 (五), 					美苑	1, 1990"
-                , " 中西美术史比较年表, 大事, 图表 (四), 					美苑	 4, 1989"
-                , "中西美术史比较年表, 大事, 图表 (三), 					美苑	3, 1989"
-                , " 中西美术史比较年表, 大事, 图表 (二), 					美苑	2, 1989"
-                , " 中西美术史比较年表, 大事, 图表(一) 					美苑	1, 1989    "
+                , " “寓意与物则乐, 画者需得其理” 				<BR>牡丹江师范学院学报	2, 1990"
+                , " 中西美术史比较年表, 大事, 图表 (五)  				<BR>	美苑	1, 1990"
+                , " 中西美术史比较年表, 大事, 图表 (四)<BR>	美苑	 4, 1989"
+                , "中西美术史比较年表, 大事, 图表 (三)<BR> 					美苑	3, 1989"
+                , " 中西美术史比较年表, 大事, 图表 (二)<BR>					美苑	2, 1989"
+                , " 中西美术史比较年表, 大事, 图表(一)<BR> 					美苑	1, 1989    "
                 , " 为模仿和抄袭辩, 							美术	1, 1989             "
                 , "模仿和抄袭的意义, 					          美术思潮终刊号 	1989"
                 , " 现代绘画的意义, 						    美术家通讯	2, 1988"
                 , " 中西艺术精神的异同,							 美苑	2, 1988    "
-                , "  苏轼美学思想中所体现的中国古典艺术精神, 				美苑	 1, 1987"
+                , "  苏轼美学思想中所体现的中国古典艺术精神<BR> 				美苑	 1, 1987"
                 , "  对”传统”问题争论的反思, 						 美苑	 3, 1986");
 
              var imagePath3 = Array() ;
              var descPath3 = Array();
-             var pub3 = Array( " 彩墨的时代语言      		台湾三民出版社 			2013"
-                , " 笔随心游的水墨艺术  		艺术生活快报				2010"
-                , "韬精以示拙---何为民的艺术     	 南京博物院  				2010"
+             var pub3 = Array( " 彩墨的时代语言,      		台湾三民出版社 			2013"
+                , " 笔随心游的水墨艺术,  		艺术生活快报				2010"
+                , "韬精以示拙---何为民的艺术,    	 南京博物院  				2010"
                 , "一种诗意的和哲学的绘画,          	东方书画				 2009"
                 , "光彩照人---王胜的油画艺术,     	 王胜画集  				2009"
                 , "自然率真的画法,                          	赵君超油画集				2008"
-                , " 郑月波的绘画艺术              	郑月波纪念文集				2007"
-                , " 崔晓东的山水画艺术                	中国红佣 <<新潮人>> 			1997"
-                , "王盛烈的艺术美学     		 王盛烈纪念文集.			2006"
+                , " 郑月波的绘画艺术,              	郑月波纪念文集				2007"
+                , " 崔晓东的山水画艺术,                	中国红佣 <<新潮人>> 			1997"
+                , "王盛烈的艺术美学,    		 王盛烈纪念文集.			2006"
                 , "一个有精神操守的人—陈海鹰, 	美术			 		7, 1996"
-                , "故土难忘, 浓墨写心                  	东方艺术				1994"
-                , "王义胜教授的工笔重彩            	 辽宁日报				9, 1994"
-                , "人书具老---宋惠民的艺术        	辽宁日报				 7, 1994"
-                , "河野通男的艺术                       	美苑			 		5, 1994  "
-                , "有意味的形式                            	 美苑					3, 1994"
-                , "异样现实形态的创造                	美术大观			 	11, 1993"
-                , "心灵再造的鲜花世界               	辽宁日报				 5, 1993"
-                , "在黑白世界中阐释哲理           	 美术大观				5, 1993"
-                , "故土难忘, 浓墨写心                	辽宁日报				4, 1993"
+                , "故土难忘, 浓墨写心,                  	东方艺术				1994"
+                , "王义胜教授的工笔重彩,            	 辽宁日报				9, 1994"
+                , "人书具老---宋惠民的艺术,       	辽宁日报				 7, 1994"
+                , "河野通男的艺术,                       	美苑			 		5, 1994  "
+                , "有意味的形式,                            	 美苑					3, 1994"
+                , "异样现实形态的创造,                	美术大观			 	11, 1993"
+                , "心灵再造的鲜花世界,               	辽宁日报				 5, 1993"
+                , "在黑白世界中阐释哲理,          	 美术大观				5, 1993"
+                , "故土难忘, 浓墨写心,               	辽宁日报				4, 1993"
                 , "在表现中再现真情和自然,        	美苑,					 2, 1993"
-                , "抽象哲理的空间阐释                 	美苑					1, 1993"
+                , "抽象哲理的空间阐释,                 	美苑					1, 1993"
                 , "情思画家乡,                               	中国文化报				11, 1992"
-                , "王盛烈中国画艺术的美学境界	, 美术家通讯				 7, 1992"
-                , "孙恩同的山水画艺术                	美术					4, 1992"
-                , "曾幼荷的艺术                        	美术					 1992"
+                , "王盛烈中国画艺术的美学境界, <BR>美术家通讯				 7, 1992"
+                , "孙恩同的山水画艺术,               	美术					4, 1992"
+                , "曾幼荷的艺术,                        	美术					 1992"
         );
 
         var publications = Array(pub1, pub2, pub3);
