--- a/publications.html
+++ b/publications.html
@@ -110,15 +110,15 @@
         "Yueying Zhong, The Modern Transformation of Traditional Paintings " +
         "<BR>Contemporary Academic Art, China 1:42-7, 1994.",
 
-        "Yueying Zhong, Artists in Art Markets Grand View of Fine Art <BR> China 5: 38-39, 1994. " ,
+        "Yueying Zhong, Artists in Art Markets <BR> Grand View of Fine Art China 5: 38-39, 1994. " ,
 
         "Yueying Zhong, A Review on Engraving Creating in Colleges of Fine Art" +
         "<BR> Chinese Engraving Art, China 2:6-7, 1994.",
 
         "Yueying Zhong, The Chinese Paintings as Correspondent Relations of Life-- " +
-                "<BR> Throb & Artist Order, Modern Art Commentary, China 1:23-8, 1994. ",
+                "Throb & Artist Order <BR> Modern Art Commentary, China 1:23-8, 1994. ",
 
-        "Yueying Zhong, The Urgency in Establishing the Domestic Art market <BR>" +
+        "Yueying Zhong, The Urgency in Establishing the Domestic Art market" +
         "<BR> Grand View of Fine Art, China 1:44-5, 1994. ",
 
         "Yueying Zhong, Who will Settle the Price? <BR> Grand View of Fine Art, China 11: 39, 1993. ",
@@ -219,41 +219,41 @@
              var imagePath3 = Array() ;
              var descPath3 = Array();
              var pub3 = Array(
-         "Yueying Zhong, The Art Creativity Inspired by Inner Vigor, Art Grand, China 2010. ",
+         "Yueying Zhong, The Art Creativity Inspired by Inner Vigor <BR> Art Grand, China 2010. ",
 
-        " Yueying Zhong, Victor Wang’s Painting, Victor Wang’s Album, China 2009. ",
+        " Yueying Zhong, Victor Wang’s Painting <BR> Victor Wang’s Album, China 2009. ",
 
-        " Yueying Zhong, Painting--the Expression of Poem and Philosophy, East Painting, China 2009. ",
+        " Yueying Zhong, Painting--the Expression of Poem and Philosophy <BR> East Painting, China 2009. ",
 
-        " Yueying Zhong, Zhao’s Oil Painting, Zhao Junchao’s Album, China 2008. ",
+        " Yueying Zhong, Zhao’s Oil Painting<BR> Zhao Junchao’s Album, China 2008. ",
 
-        " Yueying Zhong, Charm of the Ink Painting, Art Grand, China 2007. ",
+        " Yueying Zhong, Charm of the Ink Painting<BR> Art Grand, China 2007. ",
 
-        " Yueying Zhong, Personality and Art Styles, Red Clay (supp), China 25-6, 1997. ",
+        " Yueying Zhong, Personality and Art Styles<BR> Red Clay (supp), China 25-6, 1997. ",
 
-        " Yueying Zhong, The World of Haiying Chen, Fine Art, China 9: 34-6 1996. ",
+        " Yueying Zhong, The World of Haiying Chen<BR> Fine Art, China 9: 34-6 1996. ",
 
-        " Yueying Zhong, The Art of Heyietongnan, Garden of Fine Art, China 5: 5-6 1994.",
+        " Yueying Zhong, The Art of Heyietongnan<BR> Garden of Fine Art, China 5: 5-6 1994.",
 
-        " Yueying Zhong, Art - A Meaningful Form, Garden of fine art, China 2: 7-8 1994.",
+        " Yueying Zhong, Art - A Meaningful Form<BR> Garden of fine art, China 2: 7-8 1994.",
 
-        " Yueying Zhong, Creating the Different Reality Forms, Grand View of Fine Art, China 11:22-3 1993.",
+        " Yueying Zhong, Creating the Different Reality Forms<BR> Grand View of Fine Art, China 11:22-3 1993.",
 
 
-        " Yueying Zhong, Philosophically Explaining the White and Black World, "+
-        "Grand View of Fine Art, China 5: 6-17 1993.",
+        " Yueying Zhong, Philosophically Explaining the White and Black World "+
+        " <BR>Grand View of Fine Art, China 5: 6-17 1993.",
 
-        " Yueying Zhong, The Floristic World Recreated by Souls, Liaoning Daily, China 5, 1993.",
+        " Yueying Zhong, The Floristic World Recreated by Souls<BR> Liaoning Daily, China 5, 1993.",
 
-        " Yueying Zhong, Unforgettable Hometown Painted by My Heart, Liaoning Daily, China 4, 1993.",
+        " Yueying Zhong, Unforgettable Hometown Painted by My Heart<BR> Liaoning Daily, China 4, 1993.",
 
         "Yueying Zhong. “Painting My Hometown with Feelings, " +
-        "Chinese Culture Newspaper, China 11, 1992.",
+        "<BR>Chinese Culture Newspaper, China 11, 1992.",
 
         "Yueying Zhong, The Aesthetics Expressed Through Wang Shenglie’s Paintings, " +
-        "Artists Reportage, China 7: 5-7, 1992. ",
+        "<BR>Artists Reportage, China 7: 5-7, 1992. ",
 
-        " Yueying Zhong, The Landscapes by Sun Entong. Fine Art, China 4: 29-32 1992.  "
+        " Yueying Zhong, The Landscapes by Sun Entong<BR> Fine Art, China 4: 29-32 1992.  "
                      
         );
 
