--- a/index.html
+++ b/index.html
@@ -123,9 +123,18 @@
 
                                         </div>
                                     </div>
-                                    <BR>
+                                   
+                                </div>
 
-                                    <div class="content page-width2">
+                            </div>
+                        </td>
+
+                    </tr>
+                      <td id="ContentPane" class="contentPane" valign="top">
+
+                            <div id="homepage" class="content  page-width">
+                                <div class="content page-width2">
+                                    <BR>
                                         Yueying Zhong 1960 Born in Heilongjiang Province, China He received his B.A and MFA from
 
                                         Luxun Academy of Fine Arts in China. He was an associate professor of Luxun Academy of Fine
@@ -159,12 +168,9 @@
                                         He is a guest professor of Luxun Academy of Fine Arts, Currently lives in Marin County located
 
                                         in the San Francisco Bay Area in California, USA.
-                                    </div>
                                 </div>
-
                             </div>
                         </td>
-
                     </tr>
                     <tr>
                         <td id="BottomPane" colspan="4" class="bottomPane">
