--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       <td id="ContentPane" class="contentPane" valign="top">
 
                             <div id="homepage" class="content  page-width">
-                                <div class="content page-width2">
+                                <div >
                                     <BR>
                                         Yueying Zhong 1960 Born in Heilongjiang Province, China He received his B.A and MFA from
 
