--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </tr>
                       <td id="ContentPane" class="contentPane" valign="top">
 
-                            <div id="homepage" class="content  page-width">
+                            <div id="homepage" >
                                 <div >
                                     <BR>
                                         Yueying Zhong 1960 Born in Heilongjiang Province, China He received his B.A and MFA from
